# Scallop

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test-client.yml  build-test-controller-agent.yml  build-test-controller-model.yml
client/: .dockerignore  .gitignore  package-lock.json  package.json  tsconfig.json
client/src/: ClientController.ts  Config.ts  P4SFUClient.ts  ReceiverPanel.ts  SDP.ts  SenderPanel.ts  SignalClient.ts  UIComponent.ts  Util.ts  WebRTCStatsCollector.ts  client.ts  status.ts
client/test/: SDP.test.ts
client/views/: client.html.inja  receiver-info-tpl.mustache  receiver-panel-tpl.mustache  sender-template.mustache  style.scss
cmake/: boost.cmake  catch2.cmake  inja.cmake  nice.cmake  nlohmann_json.cmake  openssl.cmake  pcap.cmake
controller/: CMakeLists.txt  controller.cc  controller.h  controller_main.cc
hardware/bluefield/: scallop_bluefield3.p4
hardware/performance/: .gitignore  README.md  data_plane_performance.cpp  data_plane_performance.ipynb
hardware/seqnum_rewrite_sim/: .gitignore  requirements.txt  seqnum_rewrite_sim.ipynb
hardware/tofino/: summarize_resources.bash
hardware/tofino/control_plane/: bfrt_agent.py  ports.py  set_pythonpath.sh  sfu_switch_agent.py  test_pre_limits.py  tofino_interface.py
hardware/tofino/data_plane/: scallop_tofino.p4
hardware/tofino/data_plane/docs/: hardware_cpu_port.txt  tofino_multicast.txt
hardware/tofino/data_plane/includes/: consumer.p4  definitions.p4  deparsers.p4  headers.p4  metadata.p4  packet_types.p4  parsers.p4  ports_model.p4  ports_testbed.p4  rewrite_seqnos.p4  sfu_properties.p4  table_sizes.p4  types.p4
hardware/wireshark_plugins/: av1_rtp_extension.lua
lib/: api.h  api_client.cc  api_client.h  av1.cc  av1.h  bitstream.cc  bitstream.h  controller_api.cc  controller_api.h  controller_api_client.cc  controller_api_client.h  controller_client_connection.cc  controller_client_connection.h  controller_client_interface.cc  controller_client_interface.h  controller_switch_connection.cc  controller_switch_connection.h  controller_switch_interface.cc  controller_switch_interface.h  controller_web_server.cc  controller_web_server.h  data_plane.h  data_plane_model.cc  data_plane_model.h  drop_layer_set.h  file_descriptor.h  log.cc  log.h  p4sfu.h  participant.cc  participant.h  rpc.cc  rpc.h  sequence_rewriter.cc  sequence_rewriter.h  session.cc  session.h  session_manager.cc  session_manager.h  sfu_config.h  (+21 more)
lib/net/: http_server.h  net.h  pcap_interface.h  pcap_util.h  secure_web_socket_server.h  secure_web_socket_session.h  ssl.h  tcp_client.h  tcp_server.h  tcp_session.h  udp_server.h  web_socket_client.h  web_socket_server.h  web_socket_session.h
lib/proto/: rtcp.h  rtp.h  sdp.cc  sdp.h  stun.h
model/: CMakeLists.txt  model_main.cc
test/: CMakeLists.txt  av1_test.cc  bitstream_test.cc  data_plane_model_test.cc  drop_layer_set_test.cc  libnice_test.cc  misc_data.h  multi_peer_conn_signaling_test.cc  net_test.cc  offer-answer-example.txt  participant_test.cc  rpc_messages.h  rpc_test.cc  rtcp_test.cc  rtp_rtcp_packets.h  rtp_test.cc  sdp_lines.h  sdp_test.cc  sequence_rewriter_test.cc  session_manager_test.cc  session_test.cc  sfu_config_test.cc  sfu_table_test.cc  stream_test.cc  stun_agent_test.cc  stun_packets.h  stun_test.cc  switch-connect.http  switch_agent_state_test.cc  util_test.cc
test/mock/: mock_data_plane.h
tofino_agent/: CMakeLists.txt  tofino_agent_main.cc
util/: CMakeLists.txt  controller_cli_main.cc  switch_cli_main.cc
vm/: Makefile  README.md  gen-deploy-key.yml  install-scallop.yml  launch.yml  provision.yml
